--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,7 +25,7 @@
         </activity>
         
         <activity android:name="com.moonbc.numbercalc.GameActivity"
-        
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
         />        
         
     </application>
